css/main.css
@font-face {
    font-family: 'headerfont';
    src: url(../font/insane.ttf) format('truetype');
}
@font-face {
    font-family: 'body';
    src: url(../font/aleo.otf) format('opentype');
}
@font-face {
    font-family: 'link';
    src: url(../font/oldtown.ttf) format('truetype');
}
@font-face {
    font-family: 'header';
    src: url(../font/future.ttf) format('truetype');
}
body {
    background-image: url(../img/sand.png);
    background-size: cover;
    background-repeat: repeat;
    background-attachment: fixed;
}
header {
    width: 100%;
    border-bottom: solid 1em #0e5813;
    background-color: #e7e7e7;
    padding-top: 2%;
}
#logo {
    background-image: url(../img/logo3.png);
    background-size: 100%;
    background-repeat: no-repeat;
    padding-bottom: 35%;
    width: 40%;
    margin-left: auto;
    margin-right: auto;
}
#logo h2 {
    font-family: 'logo', sans-serif;
    font-size: 1.2em;
    top: 0;
    right: 0;
    position: absolute;
    padding-right: 5%;
}
nav ul {
    list-style-type: none;
}
nav ul li {
    font-size: 2.0em;
    font-family: 'headerfont', sans-serif;
    letter-spacing: 0.1em;
    padding: 0% 2%;
    color: #0e5813;
    width: 92%;
    text-decoration: none;
}
nav ul li:hover {
    color: #ffffff;
    background-color: #0e5813;
}
#colors {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    display: block;
    margin-top: 2%;
    padding: 5%;
    background-color: #ffffff;
}
#colors h2 {
    color: #000000;
    padding-bottom: 1%;
    font-family: 'headerfont', sans-serif;
    font-size: 2.8em;
    text-align: center;
}
#colorWhite {
    width: 19%;
    background-color: #ffffff;
    text-align: center;
    padding: 7% 0%;
    display: inline-block;
}
#colorTan {
    width: 19%;
    background-color: #e7e7e7;
    text-align: center;
    padding: 7% 0%;
    display: inline-block;
}
#colorGray {
    width: 19%;
    background-color: #d0d0d0;
    text-align: center;
    padding: 7% 0%;
    display: inline-block;
}
#colorBrown {
    width: 19%;
    background-color: #0e5813;
    color: #ffffff;
    text-align: center;
    padding: 7% 0%;
    display: inline-block;
}
#colorBlack {
    width: 19%;
    background-color: #000000;
    color: #ffffff;
    text-align: center;
    padding: 7% 0%;
    display: inline-block;
}
#filler {
    background-color: #e7e7e7;
    padding-bottom: 5%;
    margin: 3% 0;
}
#filler h1 {
    font-family: 'header', sans-serif;
    font-size: 2.2em;
    text-align: center;
    letter-spacing: 0.3em;
    font-weight: bolder;
    padding-top: 10%;
}
#filler p {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    display: block;
    font-family: 'body', serif;
}
#filler p a {
    font-family: 'link', serif;
    font-size: 2.2em;
    color: red;
    font-style: italic;
}
#filler p a:hover {
    background-color: #0e5813;
    color: #ffffff;
}
#images {
    background-color: #d0d0d0;
    padding: 5% 0%;
    text-align: center;
    margin-bottom: 3%;
}
#images h2 {
    font-family: 'headerfont', sans-serif;
    font-size: 2.8em;
    text-align: center;
}
#images img {
    border: solid 1em #000000;
    margin-bottom: 2%;
    width: 80%;
}
#buttons {
    background-color: #e7e7e7;
    padding: 5% 0%;
    text-align: center;
    margin-bottom: 3%;
}
#buttons h2 {
    font-family: 'headerfont', sans-serif;
    font-size: 2.3em;
    text-align: center;
    padding-top: 3%;
}
#buttons h3 {
    font-family: 'headerfont', sans-serif;
    text-decoration: underline;

}
#buttons img {
    width: 30%;
    margin-left: auto;
    margin-right: auto;
    display: block;
}
#droid {
    background-image: url(../img/droid.png);
    background-size: 100%;
    background-repeat: no-repeat;
    padding-top: 20%;
    margin-right: 2%;
    width: 10%;
    display: inline-block;
}
#droid:hover {
    background-image: url(../img/droidhover.png);
}
#tattoine {
    background-image: url(../img/tattoine.png);
    background-size: 100%;
    background-repeat: no-repeat;
    padding-top: 20%;
    width: 15%;
    display: inline-block;
}
#tattoine:hover {
    background-image: url(../img/tattoine2.png);
}
#contact {
    background-image: url(../img/contact.png);
    background-size: 100%;
    background-repeat: no-repeat;
    padding-top: 20%;
    margin-right: 2%;
    width: 20%;
    display: inline-block;
}
#contact:hover {
    background-image: url(../img/contacthover.png);
}
footer {
    background-color: #0e5813;
    color: #e7e7e7;
    width: 100%;
    text-align: center;
    font-size: 0.7em;
    padding: 1% 0%;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

@media screen and (min-width: 650px) {
    #filler,
    #images,
    #buttons {
        width: 90%;
        margin-left: auto;
        margin-right: auto;
    }
    #logo {
        width: 25%;
        padding-bottom: 22%;
    }
}

@media screen and (min-width: 1000px) {
    main {
        margin-left: auto;
        margin-right: auto;
        width: 80%;
        background-color: #e7e7e7;
    }
    header {
        border-bottom: solid 0.5em #0e5813;
        background-size: cover;
    }
    #logo {
        background-image: url(../img/logo.png);
        background-size: 100%;
        width: 30%;
        background-repeat: no-repeat;
        padding-bottom: 10%;
        margin-left: 10%;
    }
    #logo h2 {
        font-size: 2em;
    }
    #colors {
        width: 100%;
        padding: 0 0 2%;
    }
    #colors h2 {
        font-size: 2.3em;
    }
    #colors p {
        font-size: 1.1em;
    }
    #colorWhite {
        width: 15%;
        padding: 2%;
        border: 0.1em solid #000000;
    }
    #colorTan {
        width: 15%;
        padding: 2%;
        margin-left: 0.5%;
    }
    #colorGray {
        width: 15%;
        padding: 2%;
        margin-left: 0.5%;
    }
    #colorBrown {
        width: 15%;
        color: #ffffff;
        padding: 2%;
        margin-left: 0.5%;
    }
    #colorBlack {
        width: 15%;
        color: #ffffff;
        padding: 2%;
        margin-left: 0.5%;
    }
    #filler {
        width: 49%;
        float: left;
        clear: both;
        padding-bottom: 0;
    }
    #filler h2 {
        font-size: 2.2em;
    }
    #images {
        width: 49%;
        padding-bottom: 20%;
        display: inline-block;
        float: right;
        margin-bottom: 0%;
    }
    #buttons {
        background-color: #ffffff;
        padding: 0;
        width: 100%;
        clear: both;
    }
    #buttons h3 {
        font-size: 1.5em;
    }
    footer {
        font-size: 1em;
        font-weight: bold;
    }
}

